Refactor partnerships service and related thinks for separation of layers